# dev-eval-innovator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
deveval/: __init__.py  __main__.py  cli.py  core.py  providers.py  reporting.py  storage.py
docs/: sample-report.md
examples/: support_eval.jsonl
tests/: test_cli.py
